welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: value >=- is not a member of Int
    if (nums(i)==2 && nums(i+1) == 7 && nums(i+2)>=-1 && nums(i+2)<=3) return true
                                                 ^